--- a/src/diffusion/CMakeLists.txt
+++ b/src/diffusion/CMakeLists.txt
@@ -4,7 +4,11 @@ target_sources(incflo
    PRIVATE
    DiffusionScalarOp.cpp
    DiffusionScalarOp.H
-   DiffusionTensorOp.cpp
-   DiffusionTensorOp.H
+   # DiffusionTensorOp.cpp
+   # DiffusionTensorOp.H
+   DiffusionTensorOp1.cpp
+   DiffusionTensorOp1.H
+   DiffusionTensorOp2.cpp
+   DiffusionTensorOp2.H
    incflo_diffusion.cpp
    )
