--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ target_sources(incflo
    incflo.cpp
    incflo_advance.cpp
    incflo_apply_predictor.cpp
-   incflo_apply_corrector.cpp
+   #   incflo_apply_corrector.cpp
    incflo_compute_dt.cpp
    incflo_compute_forces.cpp
    incflo_correct_small_cells.cpp
