trying to add order 2 divtau

--- a/src/diffusion/CMakeLists.txt
+++ b/src/diffusion/CMakeLists.txt
@@ -8,5 +8,7 @@ target_sources(incflo
    DiffusionTensorOp.H
    DiffusionTensorOp1.cpp
    DiffusionTensorOp1.H
+   DiffusionTensorOp2.cpp
+   DiffusionTensorOp2.H
    incflo_diffusion.cpp
    )
