--- a/.gitignore
+++ b/.gitignore
@@ -67,15 +67,15 @@ test/tmp_build_dir/
 test/Backtrace.*
 test/*plt*/
 test/chk*/
-<<<<<<< HEAD
 test*/tmp_build_dir/
 test*/*.ex
-test*/*.cpp
+#test*/*.cpp
+
+#EY
+**/*.mat
 
 CMakeFiles
 CMakeCache.txt
-=======
->>>>>>> origin/development
 
 **/*.ex
 **/tmp_build_dir/
